[package]
name = "seen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#fang = { version = "*", default-features = false, features = ["tokio"] } # https://pxp9.github.io/rust/async-processing/
# reqwest = { version = "*", features = ["blocking", "socks"] }
# rusqlite = { version = "*", features = ["url"] }
# mozilla-readability = "*"
# url = "*"
# wkhtmltopdf = "*"
# tesseract = "*"

chromiumoxide = { version = "0.4.0", default-features = false, features = ["tokio-runtime"] }
clap = { version = "4.1.1", features = ["derive"] }
comfy-table = "6.1.4"
directories = "4.0.1"
futures = "0.3.25"
html2text = "0.4.5"
http-serde = "1.1.2"
isahc = "1.7.2"
miette = { version = "5.5.0", features = ["fancy"] }
mime = "0.3.16"
readable-readability = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls", "uuid"] }
tantivy = "0.19.1"
tempfile = "3.3.0"
termimad = "0.20.6"
textwrap = "0.16.0"
thiserror = "1.0.38"
time = { version = "0.3.17", features = ["macros", "std", "formatting", "local-offset"] }
tokio = { version = "1.24.1", features = ["full"] }
tokio-stream = { version = "*", features = ["fs"] }
toml = "0.5.10"
typetag = "0.2.4"
uuid = "1.2.2"
webpage = "1.5.0"

[dev-dependencies]
serde_test = "1.0.152"
