[package]
name = "seen"
version = "0.1.0-alpha.2"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://jirijakes.com/code/seen"
description = "Store and search through the content you have seen."
categories = ["command-line-utilities"]
keywords = ["cli", "web", "archive", "search", "index"]
exclude = ["Makefile"]

[dependencies]
chromiumoxide = { version = "0.4.0", default-features = false, features = ["tokio-runtime"] }
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.1", features = ["derive"] }
comfy-table = "6.1.4"
directories = "4.0.1"
futures = "0.3.25"
html2text = "0.4.5"
http-serde = "1.1.2"
indicatif = "0.17.3"
isahc = "1.7.2"
miette = { version = "5.5.0", features = ["fancy"] }
mime = "0.3.16"
readable-readability = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls", "uuid", "chrono", "offline"] }
tantivy = "0.19.1"
tempfile = "3.3.0"
termimad = "0.20.6"
textwrap = "0.16.0"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["fs"] }
toml = "0.5.11"
typetag = "0.2.5"
uuid = "1.2.2"
webpage = "1.5.0"

[dev-dependencies]
serde_test = "1.0.152"
